gerador-back/src/main/java/com/example/geradorback/services/error/ExceptionDto.java
package com.example.geradorback.services.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import org.springframework.http.HttpStatus;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
public class ExceptionDto {
    private HttpStatus statusCode;
    private String message;
}
